--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -6,11 +6,12 @@
     </head>
     <body>
         {% for restaurant in restaurants %}
-            <a href="#">
+            <a href="url restaurant-detail restaurant_id">
                 <ul>
-                    <li></li>
-                </ul>
-            </a>
+                  <li>{{ restaurant.name }}</li>
+                  <li>{{ restaurant.description }}</li>
+              </ul>
+              </a>
         {% endfor %}
     </body>
-</html>
+</html
